--- a/Inicio/Index.html
+++ b/Inicio/Index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon" />
+     <link rel="stylesheet" href="style/App.css">
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main>
+      <div id="container-root"></div>
+      <hr>
+      <section>
+        <img src="../public/typescript.png" alt="">
+      </section>
+      <script src="src/App.js"></script>
+    </main>
+  </body>
 </html>
