--- a/Variables/Number/index.html
+++ b/Variables/Number/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../public/Nomalice.css">
     <link
       rel="shortcut icon"
       href="../../public/favicon.ico"
@@ -19,25 +20,32 @@
   </head>
   <body>
     <main>
-      <h1>Variable Number con typeScript</h1>
-      <section class="Contenedor">
-        <article class="Number-01">
+      <header>
+        <h1>Variable Number</h1>
+        <img src="../../public/typescript.png" alt="">
+      </header>
+      <div class="container_Numeros">
+        <section class="Contenedor">
+          <article class="Number-01">
             <h3>Number 1</h3>
             <div class="num_01" id="Numbers"></div>
           </article>
-       
+  
           <article class="Number-02">
             <h3>Number 2</h3>
             <div class="num_02" id="Numbers2"></div>
           </article>
-      </section>
-      <section>
-        <div id="Numbers"></div>
-      </section>
-      <section>
-        <div id="Numbers2"></div>
-      </section>
+        </section>
+      </div>
+
+      <!-- section para button -->
+      <div class="btn--Validar">
+        <button>
+          Validar
+        </button>
+       </div>
     </main>
+
     <script src="App.js"></script>
   </body>
 </html>
